--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ChatCleanArquitecture</string>
+    <string name="app_name">PlayingClean</string>
 </resources>
