--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PlayingClean</string>
+    <string name="default_error_message">Error in the app</string>
+    <string name="network_connection_error_message">There is no internet connection!</string>
+    <string name="post_notfound_error_message">Post not found! Retry again later.</string>
 </resources>
